app/src/main/java/com/example/petvitals/domain/error/EmailErrors.kt
package com.example.petvitals.domain.error

enum class EmailErrors: Error {
    EMPTY_FIELD,
    INVALID_EMAIL
}
